# gempp-simplified

./: .gitignore  CMakeLists.txt  HOW_TO_RUN.txt  README.md  REPORT.md  SOLUTION.md  build.bat  fix.md  test.bat  test.sh
.github/workflows/: cmake-multi-platform.yml
docs/: ALG.md  GEMPP.md  MATH.md  NOTE.md  REPORT.md  REPORT_FAST.md  TASK.md
examples/benchmarks/: c3_in_k8.txt  c4_in_k4.txt  c4_in_k5.txt  fast_k12_in_k12.txt  fast_k15_in_k15.txt  fast_k4_in_p8.txt  fast_k5_in_p10.txt  fast_k6_in_p12.txt  ged_c3_in_k5.txt  ged_c3_in_k6.txt  ged_c4_in_k6.txt  ged_c4_in_k7.txt  ged_c4_in_k8.txt  ged_c5_in_k4.txt  ged_c5_in_k5.txt  ged_c5_in_k7.txt  ged_c5_in_k8.txt  ged_c6_in_k4.txt  ged_c6_in_k5.txt  ged_c6_in_k6.txt  ged_c6_in_k7.txt  ged_c6_in_k8.txt  ged_k10_in_k10.txt  ged_k12_in_k12.txt  ged_k3_in_k7.txt  ged_k3_in_p5.txt  ged_k3_in_p7.txt  ged_k4_in_k6.txt  ged_k4_in_k7.txt  ged_k4_in_p5.txt  ged_k4_in_p6.txt  ged_k4_in_p7.txt  ged_k5_in_k4.txt  ged_k5_in_k5.txt  ged_k5_in_k6.txt  ged_k5_in_k7.txt  ged_k5_in_k8.txt  ged_k5_in_p5.txt  ged_k8_in_k8.txt  ged_p3_in_p5.txt  (+39 more)
examples/experiments_inputs/: exp1_k3_in_p4.txt  exp4_c5_in_k5.txt  exp5_k6_in_k7.txt  exp6_grid4_in_grid5.txt  exp7_k8_in_k10.txt  exp8_tree12_in_path15.txt  exp_9.txt  fast_c10_in_k10.txt  fast_c12_in_k12.txt  fast_c15_in_k15.txt  fast_c4_in_k4.txt  fast_c6_in_k6.txt  fast_c8_in_k8.txt  fast_k100_in_k100.txt  fast_k10_in_k10.txt  fast_k10_in_p20.txt  fast_k20_in_k20.txt  fast_k25_in_k25.txt  fast_k30_in_k30.txt  fast_k3_in_p6.txt  fast_k50_in_k50.txt  fast_k5_in_k5.txt  fast_k75_in_k75.txt  fast_k8_in_k8.txt  fast_k8_in_p16.txt
examples/tests/02_triangle_in_square/: input.txt
examples/tests/03_path_in_star/: input.txt
examples/tests/04_single_vertex/: input.txt
examples/tests/06_k4_in_triangle/: input.txt
examples/tests/07_path4_in_path3/: expected.txt
examples/tests/08_star4_in_path/: expected.txt
examples/tests/10_k5_in_k4/: expected.txt
examples/tests/11_two_edges_in_single_edge/: expected.txt
examples/tests/12_diamond_in_triangle/: expected.txt
examples/tests/14_house_in_square/: input.txt
examples/tests/16_multigraph_exact/: expected.txt  input.txt
examples/tests/17_multigraph_extension/: expected.txt  input.txt
examples/tests/18_multigraph_self_loop/: expected.txt  input.txt
papers/: Graph_edit_distance_.md  Homendasinstructions.md  minimum_cost_subgraph_matching.md  report.md
report/: main.tex  main_2.tex  sample.bib
report/experiments_inputs/: exp2_p5_in_p4.txt  exp3_k4_in_p6.txt
scripts/: benchmark.sh  benchmark_approx.bat  benchmark_approx.sh  benchmark_ged.bat  build.sh  test.sh
source/: HOW_TO_RUN.txt
source/docs/: GEMPP.md  MATH.md
source/scripts/: benchmark.bat  benchmark_fast.sh  benchmark_ged.sh  build.bat  test.bat  test.sh
source/src/core/: matrix.h  types.h
source/src/formulation/: linear_ged.h
source/src/integer_programming/: variable.h
source/src/model/: adjacency_parser.h  problem.h
source/src/solver/: greedy_solver.h
source/tests/03_path_in_star/: expected.txt
source/tests/06_k4_in_triangle/: expected.txt  input.txt
source/tests/07_path4_in_path3/: input.txt
source/tests/08_star4_in_path/: expected.txt  input.txt
source/tests/09_pentagon_in_square/: expected.txt
source/tests/10_k5_in_k4/: input.txt
source/tests/15_petersen_fragment/: input.txt
source/tests/20_multigraph_loop_and_parallel/: expected.txt
source/tests/23_directed_cycle_in_path/: expected.txt
src/: main.cpp
src/formulation/: linear_ged.h  mcsm.h  stsm.h  subgraph_isomorphism.h
src/integer_programming/: linear_program.h
src/model/: adjacency_parser.h  graph.h
src/solver/: glpk_solver.h  greedy_solver.h
src/visualization/: graph_canvas.h
tests/01_triangle/: input.txt
tests/02_triangle_in_square/: expected.txt  input.txt
tests/03_path_in_star/: expected.txt  input.txt
tests/04_single_vertex/: input.txt
tests/05_edge/: expected.txt  input.txt
tests/06_k4_in_triangle/: expected.txt
tests/07_path4_in_path3/: expected.txt  input.txt
tests/08_star4_in_path/: expected.txt  input.txt
tests/09_pentagon_in_square/: input.txt
tests/10_k5_in_k4/: expected.txt  input.txt
tests/11_two_edges_in_single_edge/: expected.txt  input.txt
tests/12_diamond_in_triangle/: expected.txt  input.txt
tests/13_hexagon_in_pentagon/: expected.txt  input.txt
tests/14_house_in_square/: expected.txt  input.txt  pattern.txt
tests/15_petersen_fragment/: expected.txt  input.txt  pattern.txt
tests/16_multigraph_exact/: input.txt
tests/17_multigraph_extension/: input.txt
tests/18_multigraph_self_loop/: expected.txt  input.txt
tests/19_multigraph_parallel_gap/: input.txt
tests/20_multigraph_loop_and_parallel/: input.txt
tests/21_directed_asymmetric_exact/: input.txt
tests/22_directed_asymmetric_extension/: expected.txt  input.txt
tests/23_directed_cycle_in_path/: input.txt
tests/graphs/03_path_in_star/: input.txt
tests/graphs/05_edge/: input.txt
tests/graphs/06_k4_in_triangle/: input.txt
tests/graphs/07_path4_in_path3/: input.txt
tests/graphs/08_star4_in_path/: input.txt
tests/graphs/11_two_edges_in_single_edge/: input.txt
tests/graphs/13_hexagon_in_pentagon/: input.txt
tests/graphs/14_house_in_square/: expected.txt  input.txt
tests/graphs/15_petersen_fragment/: input.txt
tests/multigraphs/16_multigraph_basic/: input.txt
tests/multigraphs/17_multigraph_extension/: input.txt
tests/multigraphs/18_multigraph_triangle/: expected.txt  input.txt
tests/multigraphs/19_multigraph_high_mult/: input.txt
tests/multigraphs/20_double_edge_exact/: input.txt
tests/multigraphs/22_multigraph_k3/: input.txt
tests/multigraphs/23_parallel_path/: expected.txt  input.txt
tests/multigraphs/24_mixed_multiplicity/: expected.txt  input.txt
tests/multigraphs/25_large_multiplicity_mismatch/: expected.txt  input.txt
tests/multigraphs/26_multigraph_in_simple/: input.txt
tests/multigraphs/27_asymmetric_extension/: input.txt
tests/multigraphs/28_vertex_and_edge_extension/: expected.txt  input.txt
